@@ -7,3 +7,16 @@ noinst_HEADERS = index_utils.h
 noinst_LTLIBRARIES = libindexer.la
 
 libindexer_la_SOURCES = textfile_indexer.cc index_utils.cc
+
+if HAVE_LIBXML
+#BUILDSUBDIR_INDEXGRAPH = indexgraph
+#LIBADD_INDEXGRAPH = indexgraph/libindexgraph.la
+BUILDSUBDIR_INDEXGRAPH =
+LIBADD_INDEXGRAPH =
+else
+BUILDSUBDIR_INDEXGRAPH =
+LIBADD_INDEXGRAPH =
+endif
+
+SUBDIRS = $(BUILDSUBDIR_INDEXGRAPH)
+libindexer_la_LIBADD = $(LIBADD_INDEXGRAPH)
