@@ -1,0 +1,8 @@
+.*.swp
+*.lo
+Makefile.in
+Makefile
+.deps
+.libs
+libindexgraph.la
+nodetest
